--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,10 +12,197 @@
     <!-- Inclui o Cabeçalho -->
     <div id="header"></div>
 
-    <!-- Conteúdo -->
-    <main id="container my-5">
-        <div id="loja"></div>
-    </main>
+    <!-- Conteúdo Principal -->
+    <main class="container my-5">
+        <!-- Seção de Carrossel (Promoções) -->
+        <section id="carouselSection">
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Seção de Produtos em Destaque -->
+        <section id="productsSection" class="my-5">
+            <h2 id="camisas" class="text-center mb-4">Camisas</h2>
+            <div class="row" id="productsList">
+                <!-- Os produtos serão adicionados dinamicamente aqui -->
+                <!-- Exemplo de produto estático -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Camisa França</h5>
+                            <h3><p class="card-text">
+                                R$ 179,99
+                            </p></h3>
+                            <a href="../src/paginas/produto.blusafrança.html" class="btn btn-primary">Ver Produto</a>
+</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src ="/produtos/roupas/camisa real madrid.jpeg" class="card-img-top" alt="Produto 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Camisa Real Madrid manga longa</h5>
+                        <h3><p class="card-text">
+                            R$ 149,99
+                                </p></h3>
+                            <a href="../src/paginas/camisarealmadri.html" class="btn btn-primary">Ver produto</a>
+</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/roupas/camisa inglaterra.jpeg" class="card-img-top" alt="Produto 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Camisa Seleção Inglaterra</h5>
+                        <h3><p class="card-text">
+                            R$ 139,99       
+                        </p></h3>
+                            <a href="../src/paginas/camisaingaterra.html" class="btn btn-primary">Ver Produto</a>
+</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/roupas/camisa tottenhan.jpeg" class="card-img-top" alt="Produto 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Camisa Tottenham</h5>
+                            <h3><p class="card-text">
+                                R$ 169,99
+                                </p></h3>
+                            <a href="../src/paginas/camisatote.html" class="btn btn-primary">Ver Produto</a>
+</div>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+
+        <!-- Seção de Categorias -->
+                <!-- Seção de Produtos em Destaque -->
+                <section id="productsSection" class="my-5">
+                    <h2 id="calcados" class="text-center mb-4">Calçados</h2>
+                    <div class="row" id="productsList">
+                        <!-- Os produtos serão adicionados dinamicamente aqui -->
+                        <!-- Exemplo de produto estático -->
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/bota-nike.webp" class="card-img-top" alt="Produto 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chuteira Nike Air Zoom Elite Bege</h5>
+                                    <h3><p class="card-text">
+                                        R$ 219,99
+                                    </p></h3>
+                                    <a href="../src/paginas/chuteira nike.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src ="/produtos/calçados/WhatsApp Image 2024-12-01 at 18.13.15.jpeg" class="card-img-top" alt="Produto 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tênis nike AirMax - preto e Branco</h5>
+                                <h3><p class="card-text">
+                                    R$ 129,99
+                                        </p></h3>
+                                    <a href="../src/paginas/produto_Tênis.html" class="btn btn-primary">Ver produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/tenis-nike-air-max-90-branco-3.jpg" class="card-img-top" alt="Produto 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tênis nike AirMAx 90 Branco</h5>
+                                <h3><p class="card-text">
+                                    R$ 139,99       
+                                </p></h3>
+                                    <a href="../src/paginas/tenis branco.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/Chuteira_X_Crazyfast.1_Society_Branco_IE6632.avif" class="card-img-top" alt="Produto 4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chuteira X Crazyfast.1 Society</h5>
+                                    <h3><p class="card-text">
+                                        R$ 199,99
+                                        </p></h3>
+                                    <a href="../src/paginas/chuteira crazyfast.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+        <!-- Seção de Novidades -->
+        <!-- Seção de Produtos em Destaque -->
+        <section id="productsSection" class="my-5">
+            <h2 id="acessorios" class="text-center mb-4">Acessórios</h2>
+            <div class="row" id="productsList">
+                <!-- Os produtos serão adicionados dinamicamente aqui -->
+                <!-- Exemplo de produto estático -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/assesorios/WhatsApp Image 2024-12-03 at 14.41.56.jpeg" class="card-img-top" alt="Produto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">BOLSA NIKE BRASILIA UNISSEX</h5>
+                            <h3><p class="card-text">
+                                R$ 149,99
+                            </p></h3>
+                            <a href="../src/paginas/bolsa nike.html" class="btn btn-primary">Ver Produto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src ="/produtos/assesorios/bola de basquete2.png" class="card-img-top" alt="Produto 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Bola de basquete</h5>
+                        <h3><p class="card-text">
+                            R$ 199,99
+                                </p></h3>
+                            <a href="../src/paginas/bola basquete.html" class="btn btn-primary">Ver produto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/assesorios/WhatsApp Image 2024-12-03 at 14.40.01.jpeg" class="card-img-top" alt="Produto 3">
+                        <div class="card-body">
+                            <h5 class="card-title">BOLSA NIKE ELEMENTAL PREMIUM</h5>
+                        <h3><p class="card-text">
+                            R$ 119,99       
+                        </p></h3>
+                            <a href="../src/paginas/produto_bolsaa.html" class="btn btn-primary">Ver Produto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Bola de Futebol Penalty S11</h5>
+                            <h3><p class="card-text">
+                                R$ 189,99
+                                </p></h3>
+                            <a href="../src/paginas/produto_bola.html" class="btn btn-primary">Ver Produto</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main> 
 
     <!-- Inclui o Rodapé -->
     <div id="footer"></div>
